tests/errors/missing-module.ari
mod definitely_missing_module;

fn main() -> i64 {
  return 0;
}
